issue-1842 added springdoc
Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>